...
import Foundation

extension House {
    struct Mock {
        static var house7: House {
            House(resourceURL: .init(string: "https://www.anapioficeandfire.com/api/houses/7")!,
                  name: "House Arryn of the Eyrie",
                  region: "The Vale",
                  coatOfArms: "A sky-blue falcon soaring against a white moon, on a sky-blue field(Bleu celeste, upon a plate a falcon volant of the field)",
                  words: "As High as Honor",
                  titles: ["King of Mountain and Vale (formerly)",
                           "Lord of the Eyrie",
                           "Defender of the Vale",
...
